--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="stylesheet" href="stylesheet.css">
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>test-page</title>
   </head>
   <body>
-    <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
+    <h1 class="title">計算サイト</h1>
     <P> test </P>
 
   </body>
